--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @include fluid-text(18, 14);
+  @include fluid-text(16, 14);
 
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@ body {
   letter-spacing: -0.03em;
   color: var(--color-white);
 }
- 
+
 main {
   flex-grow: 1;
 }
@@ -84,7 +84,7 @@ a {
   color: inherit;
 
   @include hover {
-    color: var(--color-deep-purple);
+    color: var(--color-pale-pink-orange);
   }
 
   &[class] {
