--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -10,6 +10,20 @@
   @include visually-hidden;
 }
 
+
+.hidden-mobile-s {
+  @include mobile-s {
+    display: none !important;
+  }
+}
+
+.visible-mobile-s {
+  @include mobile-s-above {
+    display: none !important;
+  }
+}
+
+
 .hidden-mobile {
   @include mobile {
     display: none !important;
@@ -18,6 +32,31 @@
 
 .visible-mobile {
   @include mobile-above {
+    display: none !important;
+  }
+}
+
+
+.visible-tablet {
+  @include tablet-above {
+    display: none !important;
+  }
+}
+
+.hidden-tablet {
+  @include tablet {
+    display: none !important;
+  }
+}
+
+.visible-tablet-l {
+  @include tablet-l-above {
+    display: none !important;
+  }
+}
+
+.hidden-tablet-l {
+  @include tablet-l {
     display: none !important;
   }
 }
