--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,8 @@
 @use 'blocks/burger-button';
 @use 'blocks/select';
 @use 'blocks/header';
- 
+@use 'blocks/cities';
+@use 'blocks/promo';
+@use 'blocks/slider';
+@use 'blocks/hero';
+@use 'blocks/fullscreen-modal';
