--- a/styles/main.css
+++ b/styles/main.css
@@ -450,6 +450,10 @@ a[class] {
     box-shadow: 0 4px 35px 0 rgba(255, 185, 175, 0.3);
   }
 }
+.button-gradient {
+  box-shadow: 0 4px 35px 0 rgba(255, 185, 175, 0.3);
+  background: linear-gradient(152deg, var(--color-pale-yellow-orange) 0%, var(--color-pale-pink-orange) 100%);
+}
 
 .burger-button {
   display: inline-flex;
@@ -461,6 +465,7 @@ a[class] {
   width: 2.5rem;
   height: 1.875rem;
   position: relative;
+  z-index: 3;
 }
 @media (any-hover: hover) {
   .burger-button:hover {
@@ -522,8 +527,6 @@ a[class] {
 }
 
 .header {
-  position: fixed;
-  z-index: 100;
   background: var(--gradient-header);
   width: 100%;
   padding-block: 1.25rem;
@@ -544,6 +547,7 @@ a[class] {
   align-items: center;
   justify-content: space-between;
   column-gap: clamp(1rem, 0.2578125rem + 3.125vw, 2.5625rem);
+  z-index: 2;
 }
 @media (width <= 74.99875rem) {
   .header__navigation-inner {
@@ -575,6 +579,220 @@ a[class] {
 }
 .header__menu-item {
   padding: clamp(0.3125rem, 0.19375rem + 0.5vw, 0.5625rem) clamp(0.625rem, 0.50625rem + 0.5vw, 0.875rem);
+}
+
+.cities {
+  padding-block: 4.875rem 3.75rem;
+  display: grid;
+  row-gap: clamp(1rem, 0.7328125rem + 1.125vw, 1.5625rem);
+}
+@media (width <= 47.99875rem) {
+  .cities {
+    padding-block: 1rem 6rem;
+  }
+}
+.cities__card {
+  display: inline-flex;
+  flex-direction: column;
+  background-color: var(--color-white);
+  padding: clamp(0.625rem, 0.3875rem + 1vw, 1.125rem) clamp(0.375rem, 0.2859375rem + 0.375vw, 0.5625rem);
+  border-radius: 0.75rem;
+  row-gap: clamp(0.625rem, 0.446875rem + 0.75vw, 1rem);
+}
+.cities__card-title {
+  color: var(--color-lavender-blue);
+  font-family: var(--font-family-montserrat);
+  font-weight: 600;
+}
+.cities__card-image {
+  width: 100%;
+  min-width: 8.75rem;
+  height: clamp(7.6875rem, 5.6984375rem + 8.375vw, 11.875rem);
+}
+.cities__list {
+  display: flex;
+  column-gap: 2.5rem;
+  overflow-x: scroll;
+}
+@media (width <= 62.49875rem) {
+  .cities__list {
+    mask-image: linear-gradient(to right, transparent 0%, black 3%, black 97%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to right, transparent 0%, black 3%, black 97%, transparent 100%);
+  }
+  .cities__list::-webkit-scrollbar {
+    height: 8px;
+  }
+  .cities__list::-webkit-scrollbar-thumb {
+    background-color: var(--color-lavender-blue);
+    border-radius: 4px;
+  }
+}
+
+.promo {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.9375rem 1.375rem;
+  padding-top: clamp(2.5rem, -0.46875rem + 12.5vw, 8.75rem);
+  padding-bottom: clamp(1.6875rem, 1.45rem + 1vw, 2.1875rem);
+}
+@media (width <= 47.99875rem) {
+  .promo {
+    justify-content: center;
+  }
+}
+.promo__item {
+  position: relative;
+  display: inline-block;
+  font-family: var(--font-family-montserrat);
+  font-weight: 500;
+  color: var(--color-pale-orange);
+  text-transform: uppercase;
+  border-radius: 0.625rem;
+  padding: 0.125rem 0.3125rem;
+  z-index: 1;
+  font-size: clamp(0.875rem, 0.815625rem + 0.25vw, 1rem);
+}
+.promo__item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-deep-purple);
+  opacity: 0.5;
+  border-radius: inherit;
+  z-index: -1;
+}
+.promo__item:not(:last-child)::after {
+  position: absolute;
+  top: 0px;
+  right: -12px;
+  content: "|";
+  display: inline-block;
+  vertical-align: middle;
+  height: 10px;
+  color: var(--color-white);
+  margin-left: 0.625rem;
+}
+
+.slider {
+  grid-row: 2/4;
+}
+@media (width <= 47.99875rem) {
+  .slider {
+    position: absolute;
+    bottom: -230%;
+    left: 25%;
+  }
+}
+@media (width <= 29.99875rem) {
+  .slider {
+    bottom: calc(-100vw + 60px);
+    left: 15%;
+  }
+}
+.slider__dots {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  align-items: center;
+}
+@media (width <= 47.99875rem) {
+  .slider__dots {
+    flex-direction: row;
+  }
+}
+.slider__dot {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: transparent;
+  opacity: 0.7;
+  border: 2px solid white;
+  transition-duration: var(--transition-duration);
+  padding: 0;
+  font-size: 0;
+  cursor: pointer;
+}
+.slider__dot.is-active {
+  width: 20px;
+  height: 20px;
+  opacity: 1;
+  background-color: white;
+  border: none;
+}
+.slider__body {
+  position: relative;
+  overflow: hidden;
+}
+.slider__content {
+  opacity: 0;
+  transform: scale(0.98);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  pointer-events: none;
+  position: absolute;
+  inset: 0;
+}
+.slider__content.is-active {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: auto;
+  position: relative;
+}
+
+.hero {
+  background: url("../../images/hero/hero-back.jpg") center/cover no-repeat;
+  min-height: 53.75rem;
+}
+.hero__title, .hero__subtitle {
+  font-family: var(--font-family-montserrat);
+}
+@media (width <= 47.99875rem) {
+  .hero__title, .hero__subtitle {
+    text-align: center;
+  }
+}
+.hero__body {
+  display: grid;
+  grid-template-areas: "info info" "description slider" "button slider";
+  row-gap: clamp(1.6875rem, 1.45rem + 1vw, 2.1875rem);
+}
+@media (width <= 47.99875rem) {
+  .hero__body {
+    position: relative;
+    align-items: center;
+    grid-template-areas: "info info" "description description" "button button";
+  }
+}
+.hero__body-info {
+  grid-area: info;
+}
+@media (width <= 29.99875rem) {
+  .hero__body-info {
+    display: grid;
+    row-gap: 0.7rem;
+  }
+}
+.hero__description {
+  font-weight: 400;
+  max-width: clamp(22.8125rem, 18.2109375rem + 19.375vw, 32.5rem);
+  grid-area: description;
+}
+@media (width <= 47.99875rem) {
+  .hero__description {
+    text-align: center;
+    margin-inline: auto;
+  }
+}
+.hero__button {
+  max-width: 12.5rem;
+  grid-area: button;
+}
+@media (width <= 47.99875rem) {
+  .hero__button {
+    margin-inline: auto;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
