--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,7 +9,7 @@
   --color-dark-gray: #151515;
   --color-gray: #3E3E3E;
   --color-medium-gray: #606060;
-  --color-light-gray: #E7E7E7;
+  --color-light-gray: #CBCBCB;
   --color-extra-light-gray: #F7F7F7;
 
   /* Синие */
@@ -52,6 +52,8 @@
 
   --container-width: #{rem(1250)};
   --container-padding-x: #{rem(30)};
+
+  --border: #{rem(1)} solid var(--color-light-gray);
 
   --transition-duration: 0.2s;
 
