feat(hero): working with the main section, positioning elements

--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -12,4 +12,14 @@
     color: var(--color-lavender);
     background-color: var(--color-extra-light-gray);
   }
+
+  &-light {
+    color: var(--color-lavender);
+    background-color: var(--color-extra-light-gray);
+
+    @include hover {
+      color: var(--color-extra-light-gray);
+      background-color: var(--color-lavender);
+    }
+  }
 }
