--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,3 +8,9 @@
 @use 'blocks/button';
 @use 'blocks/burger-button';
 @use 'blocks/header';
+@use 'blocks/trustpilot';
+@use 'blocks/dish';
+@use 'blocks/card-status';
+@use 'blocks/chart-activity';
+@use 'blocks/metrics';
+@use 'blocks/hero';
