--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,6 +9,7 @@
   --color-dark-gray: #151515;
   --color-gray: #3E3E3E;
   --color-medium-gray: #606060;
+  --color-ml-gray: #7f7e7e;
   --color-light-gray: #CBCBCB;
   --color-extra-light-gray: #F7F7F7;
 
