feat(prem-health): control, positioning of elements relative to each other

--- a/styles/main.css
+++ b/styles/main.css
@@ -1207,4 +1207,186 @@ button[aria-label]::before {
   margin-inline: auto;
 }
 
+.prem-health {
+  border-bottom: var(--border);
+}
+.prem-health__body {
+  display: flex;
+  justify-content: space-around;
+  column-gap: 5rem;
+  padding-block: 7.5rem;
+}
+@media (width <= 63.99875rem) {
+  .prem-health__body {
+    padding-block: 5.3125rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .prem-health__body {
+    padding-block: 7.25rem 4.125rem;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+}
+.prem-health__body-inner {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  row-gap: clamp(2.1875rem, 1.35625rem + 3.5vw, 3.9375rem);
+  max-width: clamp(20.5625rem, 15.7828125rem + 20.125vw, 30.625rem);
+}
+@media (width <= 47.99875rem) {
+  .prem-health__body-inner {
+    align-items: center;
+  }
+}
+@media (width <= 47.99875rem) {
+  .prem-health__body {
+    row-gap: 6.3125rem;
+    align-items: center;
+  }
+}
+.prem-health__title {
+  max-width: 27.625rem;
+  font-weight: 700;
+}
+@media (width <= 63.99875rem) {
+  .prem-health__title {
+    max-width: 25.25rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .prem-health__title {
+    text-align: center;
+  }
+}
+.prem-health__highlight {
+  color: var(--color-purple);
+}
+.prem-health__list {
+  list-style-type: disc;
+  display: grid;
+  row-gap: clamp(1rem, 0.64375rem + 1.5vw, 1.75rem);
+  padding-left: 1rem;
+}
+.prem-health__link {
+  width: fit-content;
+}
+@media (any-hover: hover) {
+  .prem-health__link:hover .icon--right-arrow::after {
+    background-image: url("../../icons/prem-health/arrow-right-purple.svg");
+  }
+}
+@media (any-hover: none) {
+  .prem-health__link:active .icon--right-arrow::after {
+    background-image: url("../../icons/prem-health/arrow-right-purple.svg");
+  }
+}
+.prem-health__link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 36%;
+  transform: translateY(35%);
+  background: url("../../icons/prem-health/arrow-curve-laptop.svg") center/contain no-repeat;
+  width: clamp(3.5625rem, 0.63828125rem + 12.3125vw, 9.71875rem);
+  height: clamp(6.3125rem, 6.728125rem + -1.75vw, 5.4375rem);
+}
+@media (width <= 63.99875rem) {
+  .prem-health__link::after {
+    background-image: url("../../icons/prem-health/arrow-curve-tablet.svg");
+    bottom: -1%;
+  }
+}
+@media (width <= 47.99875rem) {
+  .prem-health__link::after {
+    background-image: url("../../icons/prem-health/arrow-curve-mobile.svg");
+    bottom: -15%;
+    right: 0;
+    left: 10%;
+  }
+}
+.prem-health__description {
+  color: var(--color-ml-gray);
+  line-height: 1.5;
+  font-size: clamp(0.75rem, 0.50359375rem + 1.0375vw, 1.26875rem);
+}
+.prem-health__image {
+  display: block;
+  width: clamp(10.66875rem, 6.71140625rem + 16.6625vw, 19rem);
+  height: clamp(21.375rem, 13.4484375rem + 33.375vw, 38.0625rem);
+}
+.prem-health__image-wrapper {
+  position: relative;
+  width: fit-content;
+}
+.prem-health__image-wrapper::after {
+  --size: 96%;
+  width: var(--size);
+  height: var(--size);
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: url("../../images/prem-health/screenshot-iphone-13.png") center/contain no-repeat;
+  z-index: -1;
+}
+.prem-health__image-wrapper::before {
+  --width: 3.25rem;
+  --height: 3.8125rem;
+  width: var(--width);
+  height: var(--height);
+  content: "";
+  position: absolute;
+  right: -20%;
+  top: 0%;
+  transform: translate(-1%, -23%);
+  background: url("../../icons/prem-health/top-right.svg") center/contain no-repeat;
+}
+@media (width <= 63.99875rem) {
+  .prem-health__image-wrapper::before {
+    --width: 2.33125rem;
+    --height: 2.75rem;
+    right: -16%;
+  }
+}
+@media (width <= 47.99875rem) {
+  .prem-health__image-wrapper::before {
+    --width: 1.84375rem;
+    --height: 2.16875rem;
+    right: -21%;
+  }
+}
+
+.icon {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.5625rem;
+}
+.icon::after {
+  --size: 1.6875rem;
+  width: var(--size);
+  height: var(--size);
+  content: "";
+  flex-shrink: 0;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+@media (width <= 63.99875rem) {
+  .icon::after {
+    --size: 1.2rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .icon::after {
+    --size: 1.10625rem;
+  }
+}
+.icon--right-arrow::after {
+  background-image: url("../../icons/prem-health/arrow-right.svg");
+}
+
 /*# sourceMappingURL=main.css.map */
