feat(top-restaurants):creating cards, moving abstract styles to a separate file and of course js logic

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,6 +8,7 @@
   /* Серые */
   --color-dark-gray: #151515;
   --color-gray: #3E3E3E;
+  --color-gray-accent: #98989A;
   --color-medium-gray: #606060;
   --color-ml-gray: #7f7e7e;
   --color-light-gray: #CBCBCB;
@@ -32,11 +33,14 @@
   --color-red: #EB3F5E;
   --color-light-red: #FF5C5C;
   --color-pink: #DB79AD;
+  --color-light-pink: #DBD9EE;
+  --color-red-pink: #F7C5BA;
 
   /* Оранжевые/Желтые */
   --color-orange: #FBAD18;
   --color-light-orange: #FFBB71;
   --color-yellow: #F6E259;
+  --color-light-yellow: #F7EDD0;
 
   /* Коричневые */
   --color-brown: #4C2F1B;
