fix: implementation of js logic for tabs and range elements, also adding various attributes in markup

--- a/styles/blocks/_chart-activity.scss
+++ b/styles/blocks/_chart-activity.scss
@@ -40,8 +40,11 @@
     &:not(.is-active) {
       border: none;
       color: var(--color-ml-gray);
+      background-color: inherit;
       @include hover {
-        color: var(--color-extra-light-gray);
+        color: var(--color-white);
+        background-color: var(--color-lavender);
+
       }
     }
   }
